--- a/control
+++ b/control
@@ -1,5 +1,5 @@
-Package: com.kdt.sparsebox
-Name: SparseBox
+Package: com.34306.watchbox
+Name: watchbox
 Version: 0.0.1
 Architecture: iphoneos-arm
 Description: An awesome application!
